--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <footer>
       <ul class="meta inline-list">
         <li><a href="mailto:to.Centritide@gmail.com">to.Centritide@gmail.com</a></li>
-        <li><a href="http://www.twitter.com/Centritide" target="_blank">twitter/jllord</a></li>
+        <li><a href="http://www.twitter.com/Centritide" target="_blank">twitter/Centritide</a></li>
         <li><a href="http://www.github.com/Centritide" target="_blank">github/Centritide</a></li>
       </ul>
     </footer>
