--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="name">Centritide</h1>
       </header>
       <article>
-        <p><a href="/dummy-website/game">What</p>
+        <p><a href="/dummy-website/game">What</a></p>
         <p>How</p>
       </article>
 
