--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://pixijs.download/release/pixi.js"></script>
-    
+    <link rel="icon" href="tableturficon.png" type="image/x-icon">
   </head>
   <body>
     <script>
