--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <article>
         <p><a href="/dummy-website/game">What</a></p>
         <p>How</p>
+        <img src="https://youtu.be/M9moY0hEJRE">
       </article>
 
     <footer>
