--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <article>
         <p><a href="/dummy-website/game">What</a></p>
         <p>How</p>
-        <img src="https://youtu.be/M9moY0hEJRE">
+        <img src="https://bonkiscoolsite.neocities.org/images/geocitystuff/misc/cutecat.gif">
       </article>
 
     <footer>
