--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 class="name">Centritide</h1>
       </header>
       <article>
-        <p><a href="/dummy-website/game">What</a></p>
+        <p><a href="/game">What</a></p>
         <p>How</p>
         <img src="https://bonkiscoolsite.neocities.org/images/geocitystuff/misc/cutecat.gif">
       </article>
