--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <article>
         <p><a href="/game">What</a></p>
-        <p>How</p>
+        <p><a href="https://cyber.dabamos.de/88x31/">How</a></p>
         <img src="https://bonkiscoolsite.neocities.org/images/geocitystuff/misc/cutecat.gif">
       </article>
 
